--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
-    "multer": "^1.4.2",
+    "multer": "^2.0.0-rc.1",
     "ramda": "^0.27.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
