--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "express-query-parser": "^1.1.0",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.7",
     "multer": "^1.4.2",
     "ramda": "^0.27.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.5.2"
   }
 }
