--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "jest",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix client"
   },
   "repository": {
     "type": "git",
@@ -55,5 +54,9 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "validator": "^13.5.2"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.14.8"
   }
 }
